--- a/ServidorJS-master/index.html
+++ b/ServidorJS-master/index.html
@@ -2,126 +2,148 @@
 <html>
 <head>
 	<title>Servidor JS</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+	<!-- <link rel="stylesheet" type="text/css" href="css/style.css"> -->
+	<style>
+		.alert{
+			position: absolute;
+			right: 0;
+			left: 0;
+			top: 0;
+		}
+	</style>
 </head>
 <body>
-<div class="container">
+	<div class="container-fluid">
 
-	<div class="header clearfix">
-		<h2>Servidor JS <small>por: Lucas Bertelli</small></h2>
-	</div>
+		<div class="header clearfix">
+			<h2>Servidor JS <small>por: Lucas Bertelli</small></h2>
+		</div>
+		<div class="row">
+			<div class="col-12">
 
-	<div class="jumbotron">
-		<form id="formulario">
-		<div id="aviso"></div>
-			<div class="form-group">
-				<label>Nome</label>
-				<input type="text" class="form-control" name="" id="serverNome" placeholder="Digite o nome">
 			</div>
-			<div class="form-group">
-				<label>Ip</label>
-				<input type="text" class="form-control" name="" id="serverIp" placeholder="Digite o IP...">
+		</div>
+		<form class="form" id="formulario">
+			<div class="row text-center pb-3">
+				<div class="col-3">
+					<span class="btn btn-warning btn-block">Servidor</span>
+				</div>
 			</div>
-			<div class="form-group">
-				<label>Porta</label>
-				<input type="number" class="form-control" name="" id="serverPorta" placeholder="Digite a porta...">
-			</div>
-			Serviço
-			<div id="servs">
-				<div>
+			<div class="row pb-4">
+				<div class="col-12 d-flex">
+					<div id="aviso"></div>
+
 					<div class="form-group">
 						<label>Nome</label>
-						<input type="text" class="form-control servNome" name="" placeholder="Digite o serviço...">
+					</br>
+						<input type="text" class="form-control" name="" id="serverNome" placeholder="Digite o nome">
 					</div>
 					<div class="form-group">
 						<label>Ip</label>
-						<input type="type" class="form-control servIp" name="" placeholder="Digite o Ip...">
+						</br>
+						<input type="text" class="form-control" name="" id="serverIp" placeholder="Digite o IP...">
 					</div>
 					<div class="form-group">
 						<label>Porta</label>
-						<input type="number" class="form-control servPorta" name="" placeholder="Digite a porta...">
-					</div>
-					<div class="form-group">
-						<label>Usuário</label>
-						<input type="text" class="form-control servUser" name="" placeholder="Digite o usuário...">
-					</div>
-					<div class="form-group">
-						<label>Senha</label>
-						<input type="password" class="form-control servSenha" name="" id="servSenha" placeholder="Digite a senha...">
-					</div>
-					<div class="form-group">
-						<label>Data Instalação</label>
-						<input type="date" class="form-control servInstalacao" name="" placeholder="Digite a data...">
-					</div>
-				</div>
-				<div>
-					<div class="form-group">
-						<label>Nome</label>
-						<input type="text" class="form-control servNome" name="" placeholder="Digite o serviço...">
-					</div>
-					<div class="form-group">
-						<label>Ip</label>
-						<input type="type" class="form-control servIp" name="" placeholder="Digite o Ip...">
-					</div>
-					<div class="form-group">
-						<label>Porta</label>
-						<input type="number" class="form-control servPorta" name="" placeholder="Digite a porta...">
-					</div>
-					<div class="form-group">
-						<label>Usuário</label>
-						<input type="text" class="form-control servUser" name="" placeholder="Digite o usuário...">
-					</div>
-					<div class="form-group">
-						<label>Senha</label>
-						<input type="password" class="form-control servSenha" name="" id="servSenha" placeholder="Digite a senha...">
-					</div>
-					<div class="form-group">
-						<label>Data Instalação</label>
-						<input type="date" class="form-control servInstalacao" name="" placeholder="Digite a data...">
+						</br>
+						<input type="number" class="form-control" name="" id="serverPorta" placeholder="Digite a porta...">
 					</div>
 				</div>
 			</div>
+			<div class="row text-center pb-3">
+				<div class="col-3">
+					<span class="btn btn-warning btn-block">Serviço</span>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-12">
+					<div id="servs">
+						<div class="d-flex">
+							<div class="form-group">
+								<label>Nome</label>
+								</br>
+								<input type="text" class="form-control servNome" name="" placeholder="Digite o serviço...">
+							</div>
+							<div class="form-group">
+								<label>Ip</label>
+								</br>
+								<input type="type" class="form-control servIp" name="" placeholder="Digite o Ip...">
+							</div>
+							<div class="form-group">
+								<label>Porta</label>
+								</br>
+								<input type="number" class="form-control servPorta" name="" placeholder="Digite a porta...">
+							</div>
+							<div class="form-group">
+								<label>Usuário</label>
+								</br>
+								<input type="text" class="form-control servUser" name="" placeholder="Digite o usuário...">
+							</div>
+							<div class="form-group">
+								<label>Senha</label>
+								</br>
+								<input type="password" class="form-control servSenha" name="" id="servSenha" placeholder="Digite a senha...">
+							</div>
+							<div class="form-group">
+								<label>Data Instalação</label>
+								</br>
+								<input type="date" class="form-control servInstalacao" name="" placeholder="Digite a data...">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
 			<button type="button" id="add" class="btn btn-success">+</button>
 			<button type="submit" class="btn btn-primary">Salvar</button>
 		</form>
-	</div>
 
-	<div class="row marketing">
-		<div class="col-lg-12">
-		 <table class="table table-hover" >
-		    <thead>
-		      <tr>
-		        <th>Nome</th>
-		        <th>IP</th>
-		        <th>Porta</th>
-		      </tr>
-		    </thead>
-		    <tbody id="resultados">
-		    </tbody>
-		 </table>
 
-		 <table class="table table-hover" >
-		    <thead>
-		      <tr>
-		        <th>Nome</th>
-		        <th>IP</th>
-		        <th>Porta</th>
-		        <th>Usuário</th>
-		        <th>Senha</th>
-		        <th>Data Instalação</th>
-		      </tr>
-		    </thead>
-		    <tbody id="consulta">
-		    </tbody>
-		 </table>
+		<div class="row marketing">
+			<div class="col-lg-12">
+				<table class="table table-hover" >
+					<thead>
+						<tr>
+							<th>Nome</th>
+							<th>IP</th>
+							<th>Porta</th>
+							<th colspan="2" class="text-center">Ações</th>
+						</tr>
+					</thead>
+					<tbody id="resultados">
+					</tbody>
+				</table>
 
+				<table class="table table-hover" >
+					<thead>
+						<tr>
+							<th>Nome</th>
+							<th>IP</th>
+							<th>Porta</th>
+							<th>Usuário</th>
+							<th>Senha</th>
+							<th>Data Instalação</th>
+							<th>Ações</th>
+						</tr>
+					</thead>
+					<tbody id="consulta">
+					</tbody>
+				</table>
+
+			</div>
 		</div>
 	</div>
-</div>
-<script src="https://code.jquery.com/jquery-3.1.1.js" integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA=" crossorigin="anonymous"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/main.js"></script>
-	</body>
+	<div class="alert alert-success fade show d-none" role="alert" id="alert">
+
+	</div>
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+	<script src="js/main.js"></script>
+</body>
 </html>
