--- a/ServidorJS-master/index.html
+++ b/ServidorJS-master/index.html
@@ -15,11 +15,11 @@
 		}
 	</style>
 </head>
-<body>
-	<div class="container-fluid">
+<body class="bg-light">
+	<div class="container">
 
 		<div class="header clearfix">
-			<h2>Servidor JS <small>por: Lucas Bertelli</small></h2>
+			<h1>Servidor JS <small>por: Lucas Bertelli</small></h1>
 		</div>
 		<div class="row">
 			<div class="col-12">
@@ -27,9 +27,9 @@
 			</div>
 		</div>
 		<form class="form" id="formulario">
-			<div class="row text-center pb-3">
+			<div class="row text-center py-3">
 				<div class="col-3">
-					<span class="btn btn-warning btn-block">Servidor</span>
+					<h4>Servidor</h4>
 				</div>
 			</div>
 			<div class="row pb-4">
@@ -55,7 +55,7 @@
 			</div>
 			<div class="row text-center pb-3">
 				<div class="col-3">
-					<span class="btn btn-warning btn-block">Serviço</span>
+					<h4>Serviço</h4>
 				</div>
 			</div>
 			<div class="row">
@@ -103,7 +103,7 @@
 		</form>
 
 
-		<div class="row marketing">
+		<div class="row marketing py-5">
 			<div class="col-lg-12">
 				<table class="table table-hover" >
 					<thead>
