--- a/ServidorJS-master/layout.html
+++ b/ServidorJS-master/layout.html
@@ -9,49 +9,142 @@
   <title>Layout 1!</title>
 </head>
 <body class="bg-light">
+
   <header>
-    <div class="fixed-top">
-      <nav>
-        <ul class="nav pb-2 border-bottom justify-content-center">
-          <li class="nav-item">
-            <a class="nav-link fonte2" href="#">GESTÃO</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link fonte2" href="#">USUÁRIO</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link fonte2" href="#">REGRAS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link fonte2" href="#">RELATÓRIOS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link fonte2" href="#">RADAR</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link fonte2" href="#">DISPOSITIVOS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link fonte2" href="#">CADASTRO</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link fonte2" href="#">DASHBOARD</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link fonte2" href="#">SISTEMA</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link fonte2" href="#">DOCUMENTOS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link fonte2" href="#">AJUDA</a>
-          </li>
-        </ul>
-      </nav>
-  <div class="container py-5">
+    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary">
+      <div class="container">
+        <a class="navbar-brand" href="">BCF</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label class="font-weight-bold"="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0 text-white">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-white"href="#" id="cadastrar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Gestão de Ocorrências
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-white"href="#" id="cadastrar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Usuários
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-white"href="#" id="cadastrar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Regras
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-white"href="#" id="listar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Relatórios
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-white"href="#" id="listar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Radar
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-white"href="#" id="listar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dispositivos
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-white"href="#" id="listar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Cadastro
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-white"href="#" id="listar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Dashboard
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-white"href="#" id="listar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Sistema
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle text-white"href="#" id="listar" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Ajuda
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+                <a class="dropdown-item" href="">Teste</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <div class="container-fluid">
+    <h3 class="py-3 text-center">Formulário BCF!</h3>
+    <hr class="my-4">
+    <h4 class="font-weight-light text-center">Dados do Produto</h4>
     <div class="form-row mt-4">
       <div class="col-3 pb-3">
-        <label for="exampleSt">Ponto</label>
+        <label class="font-weight-bold">Ponto</label class="font-weight-bold">
         <select class="form-control">
           <option>Selecione</option>
           <option>Sim</option>
@@ -59,41 +152,41 @@
         </select>
       </div>
       <div class="col-3 pb-3">
-        <label for="exampleAccount">Nome do Produto</label>
+        <label class="font-weight-bold">Nome do Produto</label class="font-weight-bold">
         <input type="text" class="form-control" placeholder="Digite Nome do Produto...">
       </div>
       <div class="col-3 pb-3">
-        <label for="exampleCtrl">Bairro</label>
+        <label class="font-weight-bold">Bairro</label class="font-weight-bold">
         <input type="text" class="form-control"  placeholder="Digite o brairro...">
       </div>
       <div class="col-3 pb-3">
-        <label for="exampleAmount">Origem</label>
+        <label class="font-weight-bold">Origem</label class="font-weight-bold">
         <div class="input-group">
           <input type="text" class="form-control" placeholder="Digite a orgigem...">
         </div>
       </div>
       <div class="col-4 pb-3">
-        <label for="exampleFirst">Endereço</label>
+        <label class="font-weight-bold">Endereço</label class="font-weight-bold">
         <input type="text" class="form-control" placeholder="Digite o endereço...">
       </div>
       <div class="col-4 pb-3">
-        <label for="exampleZip">CEP</label>
+        <label class="font-weight-bold">CEP</label class="font-weight-bold">
         <input type="text" class="form-control" placeholder="Digite o CEP...">
       </div>
       <div class="col-4 pb-3">
-        <label for="exampleCity">Município</label>
+        <label class="font-weight-bold">Município</label class="font-weight-bold">
         <input type="text" class="form-control" placeholder="Digite o Município...">
       </div>
       <div class="col-4 pb-3">
-        <label for="exampleCity">Estado</label>
+        <label class="font-weight-bold">Estado</label class="font-weight-bold">
         <input type="text" class="form-control" placeholder="Digite o Estado...">
       </div>
       <div class="col-4 pb-3">
-        <label for="exampleCity">Telefone</label>
+        <label class="font-weight-bold">Telefone</label class="font-weight-bold">
         <input type="text" class="form-control" placeholder="Digite o Telefone...">
       </div>
       <div class="col-4 pb-3">
-        <label for="exampleSt">Aberto</label>
+        <label class="font-weight-bold">Aberto</label class="font-weight-bold">
         <select class="form-control">
           <option>Selecione</option>
           <option>Sim</option>
@@ -101,7 +194,7 @@
         </select>
       </div>
       <div class="col-4 pb-3">
-        <label for="exampleSt">Fechado</label>
+        <label class="font-weight-bold">Fechado</label class="font-weight-bold">
         <select class="form-control">
           <option>Selecione</option>
           <option>Sim</option>
@@ -109,11 +202,11 @@
         </select>
       </div>
       <div class="col-4 pb-3">
-        <label for="exampleZip">Ponto de Referência</label>
+        <label class="font-weight-bold">Ponto de Referência</label class="font-weight-bold">
         <input type="text" class="form-control" placeholder="Digite o ponto de Referência...">
       </div>
       <div class="col-4 pb-3">
-        <label for="exampleSt">Ponto VIP</label>
+        <label class="font-weight-bold">Ponto VIP</label class="font-weight-bold">
         <select class="form-control">
           <option>Selecione</option>
           <option>Sim</option>
@@ -121,22 +214,22 @@
         </select>
       </div>
       <div class="col-4 pb-3">
-        <label for="exampleCity">Usuário</label>
+        <label class="font-weight-bold">Usuário</label class="font-weight-bold">
         <input type="text" class="form-control" placeholder="Digite o seu Usuário...">
       </div>
       <div class="col-4 pb-3">
-        <label for="exampleZip">Latitude</label>
+        <label class="font-weight-bold">Latitude</label class="font-weight-bold">
         <input type="text" class="form-control" placeholder="Distância...">
       </div>
       <div class="col-4 pb-3">
-        <label for="exampleZip">Latitude</label>
+        <label class="font-weight-bold">Longitude</label class="font-weight-bold">
         <input type="text" class="form-control" placeholder="Distância...">
       </div>
-      </div>
-      <div class="row">
+    </div>
+    <div class="row">
       <div class="col-3"></div>
       <div class="col-6">
-        <div class="row">
+        <div class="row py-5">
           <div class="col-2"></div>
           <div class="col-2">
             <button type="button" class="btn btn-primary">Salvar</button>
@@ -154,11 +247,11 @@
         </div>
       </div>
       <div class="col-3"></div>
-      </div>
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+</div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 </body>
 </html>
